--- a/.dev.env
+++ b/.dev.env
@@ -1,6 +1,7 @@
 PORT=5000
-POSTGRES_USER=npo
+POSTGRES_USER=postgres
 POSTGRES_HOST=127.0.0.1
-POSTGRES_PASSWORD=5513 
+POSTGRES_PASSWORD=root 
 POSTGRES_DB=npo_automative
 POSTGRES_PORT=5432
+PRIVATE_KEY=secret_key_safasa
