--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
     "swagger-ui-express": "^4.1.6",
+    "util": "^0.12.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
