Откатил изменения с конвертацией

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pdf-poppler": "^0.2.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "phantomjs": "^2.1.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
