Формулирует заявку зип.

--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/websockets": "^8.2.4",
+    "archiver": "^2.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cross-env": "^7.0.3",
     "mysql2": "^2.3.0",
     "node-html-parser": "^5.2.0",
+    "node-xlsx": "^0.21.0",
     "pdf-image": "^2.0.0",
     "pdf-poppler": "^0.2.1",
     "pg": "^8.7.1",
