--- a/.dev.env
+++ b/.dev.env
@@ -5,3 +5,5 @@ POSTGRES_PASSWORD=5513
 POSTGRES_DB=npo_automative
 POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key_safasa
+
+APPLICATION_TYPE=DEVELOPMENT
