--- a/.prod.env
+++ b/.prod.env
@@ -5,3 +5,6 @@ POSTGRES_PASSWORD=5513
 POSTGRES_DB=npo_automative
 POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key_safasa
+
+
+APPLICATION_TYPE=PRODUCTION
