--- a/.prod.env
+++ b/.prod.env
@@ -5,6 +5,6 @@ POSTGRES_PASSWORD=5513
 POSTGRES_DB=npo_automative
 POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key_safasa
-
+SYSTEM_USER=david
 
 APPLICATION_TYPE=PRODUCTION
