--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "cross-env NODE_ENV=prod nest build",
+    "build": "cross-env NODE_ENV=prod && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "cross-env NODE_ENV=prod nest start",
-    "start:dev": "cross-env NODE_ENV=dev nest start --watch",
+    "start": "cross-env NODE_ENV=prod && nest start",
+    "start:dev": "cross-env NODE_ENV=dev && nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "cross-env NODE_ENV=prod && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
